[project]
name = "aioradio"
version = "0.21.11"
description = "Generic asynchronous i/o python utilities for AWS services (SQS, S3, DynamoDB, Secrets Manager), Redis, MSSQL (pyodbc), JIRA and more"
readme = "README.md"
authors = [
    { name = "John Sattari", email = "john.sattari@encoura.org" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aioboto3==14.1.0",
    "aiojobs==1.3.0",
    "backoff>=2.1.2",
    "boto3==1.37.1",
    "botocore==1.37.1",
    "cython==3.0.12",
    "ddtrace==3.2.1",
    "fakeredis==2.27.0",
    "faust-cchardet==2.1.19",
    "httpx==0.28.1",
    "mandrill>=1.0.60",
    "mlflow==2.19.0",
    "numpy==2.0.2",
    "openpyxl==3.0.10",
    "orjson==3.9.15",
    "pandas==2.2.3",
    "polars==1.25.2",
    "protobuf>=5.29.6",
    "psycopg2-binary==2.9.10",
    "pyarrow==18.1.0",
    "pyodbc==5.2.0",
    "pysmb==1.2.10",
    "pyspark==3.5.5",
    "python-json-logger>=2.0.2",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "flask==3.1.0",
    "flask-cors>=4.0.2",
    "moto==4.2.14",
    "pre-commit==3.8.0",
    "pylint==3.3.5",
    "pytest==8.1.2",
    "pytest-asyncio==0.21.1",
    "pytest-cov==5.0.0",
    "typing-extensions>=4.10.0",
    "werkzeug==3.1.3",
]

[tool.uv]
no-binary-package = ["pyodbc"]
override-dependencies = [
    "pyasn1>=0.6.3",
    "zipp>=3.19.1",
    "urllib3>=1.26.20",
    "requests>=2.32.2",
    "grpcio>=1.66.0"
]

[tool.setuptools]
packages = ["aioradio", "aioradio.aws"]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
